Started working on TinyTest 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,12 @@ set(CMAKE_BUILD_TYPE Debug)
 
 # Sources
 set(tinytest
-    src/tinytest.hpp
+    src/tinytest1.hpp
+    src/tinytest2.hpp
 )
 include_directories(src/)
 
 # Applications
 # -- TEST --
-add_executable(test_letters ${tiytest} test/letters.hpp test/test_letters.cpp)
+add_executable(test_tinytest1 ${tinytest} test/tinytest1/letters.hpp test/tinytest1/test_letters.cpp)
+add_executable(test_tinytest2 ${tinytest} test/tinytest2/letters.hpp test/tinytest2/test_letters.cpp)
