Moved documentation generation to another CMakeLists in the doc directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,6 @@ set(CMAKE_BUILD_TYPE Debug)
 # Variables
 set(COMPILE_DOXYGEN OFF)
 
-# Packages
-if(${COMPILE_DOXYGEN})
-find_package(Doxygen REQUIRED)
-endif()
-
 # Sources
 set(tinytest
     src/tinytest.hpp
@@ -23,12 +18,5 @@ add_executable(test_tinytest ${tinytest} test/tinytest/letters.hpp test/tinytest
 
 # Doxygen
 if (${COMPILE_DOXYGEN})
-    add_custom_target(
-            doc ALL
-            COMMAND
-            ${DOXYGEN_EXECUTABLE} doc/doxyfile
-            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-            COMMENT "Generating API documentation with Doxygen"
-            VERBATIM
-    )
+    add_subdirectory("doc")
 endif()
