Made CMakeLists.txt FetchContent compatible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,27 @@
 # Version minimale de CMake requise
 cmake_minimum_required(VERSION 3.12)
-project(scrabble)
-set(CMAKE_BUILD_TYPE Debug)
+project(tinytest)
 
 # Variables
 set(COMPILE_DOXYGEN OFF)
 
-# Sources
-set(tinytest
-    src/tinytest.hpp
-)
+# Includes
 include_directories(src/)
 
-# Applications
-# -- TEST --
-add_executable(test_tinytest ${tinytest} test/tinytest/letters.hpp test/tinytest/test_letters.cpp)
+# If this is not being run by another CMake (e.g. FetchContent)
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    # Base project settings
+    set(CMAKE_BUILD_TYPE Debug)
+
+    # Sources
+    set(tinytest
+        src/tinytest.hpp
+    )
+
+    # Applications
+    # -- TEST --
+    add_executable(test_tinytest ${tinytest} test/tinytest/letters.hpp test/tinytest/test_letters.cpp)
+endif()
 
 # Doxygen
 if (${COMPILE_DOXYGEN})
